# Loggrep

./: .coverage  .coveragerc  .dockerignore  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CI_CD_EXPLANATION.md  CI_CD_VALIDATION_CHECKLIST.md  COMPETITIVE_ANALYSIS.md  Dockerfile  EXECUTIVE_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_MIGRATION.md  README.md  README_PROFESSIONAL.md  TESTS.md  TEST_SUMMARY.md  codecov.yml  docker-compose.yml  loggrep  loggrep.py  pyproject.toml  run_tests.py  setup_dev.py  test_loggrep.py
.github/workflows/: ci.yml  test.yml
docs/: CHANGELOG.md  CI_CD_EXPLANATION.md  DOCKER_TESTING.md  DOCUMENTATION_INDEX.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TESTS.md  TEST_SUMMARY.md
reports/: README.md
reports/benchmarks/: benchmark_results.json
reports/profiling/: profile_results_20251012_184653.prof
scripts/: benchmark.py  dev.sh  performance_test.py  profile_loggrep.py  test_docker.sh
src/loggrep/: __init__.py  cli.py  core.py  timestamps.py
tests/: __init__.py  fix_live_test.patch  run_tests.py  test_loggrep.py  test_unit_coverage.py
